# set08116

./: .gitmodules  LICENSE  README.md
labs/: CMakeLists.txt  cmake_build_vs15.bat  cmake_build_vs2017.bat
labs/coursework/: CMakeLists.txt  DownloadProject.cmake
labs/coursework/src/: main.cpp
labs/practicals/00_TestProject/: 00_TestProject.cpp
labs/practicals/01_Getting_Started/: 01_Getting_Started.cpp
labs/practicals/02_Triangle/: 02_Triangle.cpp
labs/practicals/03_Quads/: 03_Quads.cpp
labs/practicals/04_Quads_with_Quads/: 04_Quads_with_Quads.cpp
labs/practicals/05_Quads_with_Triangle_Strips/: 05_Quads_with_Triangle_Strips.cpp
labs/practicals/06_Quads_with_Lines/: 06_Quads_with_Lines.cpp
labs/practicals/07_Quads_with_Line_Strips/: 07_Quads_with_Line_Strips.cpp
labs/practicals/08_Quads_with_Line_Loops/: 08_Quads_with_Line_Loops.cpp
labs/practicals/09_Quads_with_Triangle_Fans/: 09_Quads_with_Triangle_Fans.cpp
labs/practicals/0_introduction/: main.cpp
labs/practicals/12_GLM/: 12_GLM.cpp
labs/practicals/13_Rotating_Triangle/: 13_Rotating_Triangle.cpp
labs/practicals/14_Scaling_Triangle/: 14_Scaling_Triangle.cpp
labs/practicals/15_Scale_and_Rotate/: 15_Scale_and_Rotate.cpp
labs/practicals/16_Moving_Quad/: 16_Moving_Quad.cpp
labs/practicals/17_Full_Transformation/: 17_Full_Transformation.cpp
labs/practicals/18_Point_Based_Sierpinski/: 18_Point_Based_Sierpinski.cpp
labs/practicals/19_Cube/: 19_Cube.cpp
labs/practicals/20_Transformed_Cube/: 20_Transformed_Cube.cpp
labs/practicals/21_Indexed_Cube/: 21_Indexed_Cube.cpp
labs/practicals/22_Indexed_Cube/: 22_Indexed_Cube.cpp
labs/practicals/22_Sierpinski_Gasket/: 22_Sierpinski_Gasket.cpp
labs/practicals/23_Sierpinski_Gasket/: 23_Sierpinski_Gasket.cpp
labs/practicals/23_Sphere_Subdivision/: 23_Sphere_Subdivision.cpp
labs/practicals/24_Meshes/: 24_Meshes.cpp
labs/practicals/24_Sphere_Subdivision/: 24_Sphere_Subdivision.cpp
labs/practicals/25_Meshes/: 25_Meshes.cpp
labs/practicals/25_Transforming_Meshes/: 25_Transforming_Meshes.cpp
labs/practicals/26_Shaders/: 26_Shaders.cpp  colour.frag  colour.vert
labs/practicals/27_Texturing_Shader/: 27_Texturing_Shader.cpp  simple_texture.vert
labs/practicals/27_Transforming_Meshes/: 27_Transforming_Meshes.cpp
labs/practicals/28_Repeat_Textures/: 28_Repeat_Textures.cpp
labs/practicals/29_Anisotropic/: 29_Anisotropic.cpp
labs/practicals/29_Shaders/: 29_Shaders.cpp
labs/practicals/30_Mipmaps/: 30_Mipmaps.cpp
labs/practicals/31_Anisotropic/: 31_Anisotropic.cpp
labs/practicals/31_Texturing_Shader/: 31_Texturing_Shader.cpp  simple_texture.frag
labs/practicals/32_Blended_Textures/: 32_Blended_Textures.cpp  blend.frag  blend.vert
labs/practicals/32_Repeat_Textures/: 32_Repeat_Textures.cpp
labs/practicals/33_Dissolve/: 33_Dissolve.cpp  dissolve.vert
labs/practicals/33_Mipmaps/: 33_Mipmaps.cpp
labs/practicals/34_Anisotropic/: 34_Anisotropic.cpp
labs/practicals/34_Simple_Cell_Shading/: 34_Simple_Cell_Shading.cpp  simple_cell.frag
labs/practicals/35_Blended_Textures/: 35_Blended_Textures.cpp
labs/practicals/35_Geometry_Builder/: 35_Geometry_Builder.cpp
labs/practicals/35x_Transform_Hierarchy/: 35x_Transform_Hierarchy.cpp
labs/practicals/36_Dissolve/: 36_Dissolve.cpp  dissolve.frag
labs/practicals/36_Loading_Models/: 36_Loading_Models.cpp
labs/practicals/37_Simple_Cell_Shading/: 37_Simple_Cell_Shading.cpp  simple_cell.vert
labs/practicals/37_Target_Camera/: 37_Target_Camera.cpp
labs/practicals/38_Free_Camera/: 38_Free_Camera.cpp
labs/practicals/39_Chase_Camera/: 39_Chase_Camera.cpp
labs/practicals/39_Geometry_Builder/: 39_Geometry_Builder.cpp
labs/practicals/40_Arc_Ball_Camera/: 40_Arc_Ball_Camera.cpp
labs/practicals/41_Picking/: 41_Picking.cpp
labs/practicals/42_Simple_Ambient_Light/: 42_Simple_Ambient_Light.cpp  simple_ambient.vert
labs/practicals/43_Diffuse_Light_1/: 43_Diffuse_Light_1.cpp  simple_diffuse.vert
labs/practicals/44_Diffuse_Light_2/: 44_Diffuse_Light_2.cpp  working_diffuse.vert
labs/practicals/45_Specular_Light/: 45_Specular_Light.cpp  simple_specular.vert
labs/practicals/46_Combined_Lighting/: 46_Combined_Lighting.cpp  combined_lighting.frag  combined_lighting.vert
labs/practicals/47_Gouraud_Shading/: 47_Gouraud_Shading.cpp  gouraud.frag  gouraud.vert
labs/practicals/48_Phong_Shading/: 48_Phong_Shading.cpp  phong.frag  phong.vert
labs/practicals/49_Point_Light/: 49_Point_Light.cpp  point.frag  point.vert
labs/practicals/50_Spot_Light/: 50_Spot_Light.cpp  spot.frag
labs/practicals/51_Multiple_Lights/: 51_Multiple_Lights.cpp  multi-light.frag  multi-light.vert
labs/practicals/52_Multifile_Shaders/: 52_Multifile_Shaders.cpp  shader.frag  shader.vert
labs/practicals/53_Shadow_Mapping/: 53_Shadow_Mapping.cpp
labs/practicals/54_Shadowing/: 54_Shadowing.cpp  shader.frag  shader.vert  shadow.frag
labs/practicals/55_Normal_Mapping/: 55_Normal_Mapping.cpp  shader.frag  shader.vert
labs/practicals/56_Cube_Maps/: 56_Cube_Maps.cpp  shader.vert
labs/practicals/57_Skybox/: 57_Skybox.cpp  shader.frag
labs/practicals/58_Environment_Maps/: 58_Environment_Maps.cpp  env_map.frag  env_map.vert
labs/practicals/59_Tarnished_Object/: 59_Tarnished_Object.cpp  tarnish.frag  tarnish.vert
labs/practicals/60_Terrain/: 60_Terrain.cpp  part_weighted_texture_4.frag  terrain.frag  terrain.vert
labs/practicals/61_Fog/: 61_Fog.cpp  part_fog.frag  shader.frag  shader.vert
labs/practicals/62_Geometry_Shader/: 62_Geometry_Shader.cpp  main.cpp  shader.frag  shader.geom  shader.vert
labs/practicals/63_Exploding_Shape/: 63_Exploding_Shape.cpp  explode.geom  main.cpp  shader.frag  shader.vert
labs/practicals/64_Showing_Normals/: 64_Showing_Normals.cpp  main.cpp  normals.geom  shader.frag  shader.vert
labs/practicals/65_Billboarding/: 65_Billboarding.cpp  billboard.geom  main.cpp  shader.frag  shader.vert
labs/practicals/66_Particle_System/: 66_Particle_System.cpp  main.cpp  particle.frag  particle.geom  particle.vert
labs/practicals/67_Compute_Shader/: 67_Compute_Shader.cpp  (+1 more)
(+39 files in other folders)
